# rust-payjoin

./: .coderabbit.yaml  .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  contributing.txt  flake.nix  lcov.info  learnings.md  lefthook.yml  payjoin-cli.Dockerfile  payjoin-client.Dockerfile  payjoin-relay.Dockerfile  querying_the_llm.txt  rust-toolchain.toml  rustfmt.toml  taplo.toml  treefmt.nix  uniffi-bindgen.rs  uniffi.toml
bip78/: Cargo.toml  README.md
bip78/src/: fee_rate.rs  input_type.rs  lib.rs  psbt.rs  uri.rs  weight.rs
bip78/src/receiver/: error.rs  mod.rs
bip78/src/sender/: error.rs  mod.rs
bip78/tests/: integration.rs
fuzz/: .gitignore  Cargo.toml  README.md  cycle.sh  fuzz-util.sh  fuzz.sh
fuzz/contrib/: lint.sh
fuzz/fuzz_targets/bitcoin/: deserialize_psbt.rs
fuzz/fuzz_targets/uri/: deserialize_pjuri.rs  pjuri_roundtrip.rs
fuzz/fuzz_targets/url/: arbitrary_url.rs  decode_url.rs
ohttp-relay/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  nginx.conf.template  rustfmt.toml
ohttp-relay/.github/workflows/: rust.yml
ohttp-relay/contrib/: test.sh
ohttp-relay/nix/: module.nix
ohttp-relay/src/: gateway_helpers.rs  gateway_prober.rs  gateway_uri.rs  lib.rs  main.rs  sentinel.rs
ohttp-relay/src/bootstrap/: connect.rs  mod.rs  ws.rs
ohttp-relay/tests/: integration.rs
payjoin/: CHANGELOG.md  Cargo.toml  README.md
payjoin-cli/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  example.bitcoind.config.toml  example.config.toml  example.esplora.config.toml
payjoin-cli/contrib/: lint.sh  test.sh
payjoin-cli/src/: app.rs  appconf.rs  db.rs  main.rs
payjoin-cli/src/app/: config.rs  mod.rs  rpc.rs  v1.rs  v2.rs  wallet.rs
payjoin-cli/src/cli/: mod.rs  session_ref.rs
payjoin-cli/src/db/: error.rs  mod.rs  v2.rs
payjoin-cli/tests/: cli_esplora.rs  e2e.rs  e2e_esplora.rs
payjoin-cli/tests/common/: mod.rs
payjoin-client/: Cargo.toml  README.md
payjoin-client/src/: app.rs  app_config.rs  main.rs
payjoin-client/src/http_relay/: mod.rs
payjoin-defaults/: Cargo.toml  README.md
payjoin-defaults/src/: lib.rs
payjoin-defaults/tests/: integration.rs
payjoin-directory/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
payjoin-directory/contrib/: health-check.sh  test.sh
payjoin-directory/src/: cli.rs  config.rs  db.rs  key_config.rs  lib.rs  main.rs  metrics.rs
payjoin-directory/src/db/: files.rs  mem.rs  mod.rs  redis.rs
payjoin-ffi/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml  uniffi-bindgen.rs  uniffi.toml
payjoin-ffi/.github/workflows/: build-python.yml
payjoin-ffi/contrib/: lint.sh  test.sh
payjoin-ffi/csharp/: .gitignore  DEVELOPMENT.md  Directory.Build.props  IntegrationTests.cs  Payjoin.Http.cs  Payjoin.Tests.csproj  Payjoin.csproj  Payjoin.nuspec  README.md  RELEASING.md  UnitTests.cs
payjoin-ffi/csharp/contrib/: test.sh
payjoin-ffi/csharp/scripts/: build_nuget_native.ps1  build_nuget_native.sh  cross-requirements.txt  generate_bindings.ps1  generate_bindings.sh  smoke_nuget_package.sh
payjoin-ffi/csharp/test/: IntegrationTest.cs  Tests.csproj  UnitTest.cs
payjoin-ffi/dart/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
payjoin-ffi/dart/contrib/: test.sh
payjoin-ffi/dart/docs/: precompiled_binaries.md
payjoin-ffi/dart/hook/: build.dart
payjoin-ffi/dart/integration_tests/: README.md  analysis_options.yaml  pubspec.yaml
payjoin-ffi/dart/lib/: http.dart  test_utils.dart
payjoin-ffi/dart/native/: Cargo.toml  rust-toolchain.toml
payjoin-ffi/dart/scripts/: bindgen_generate.sh  generate_bindings.sh  generate_linux.sh  generate_macos.sh  generate_universal_macos.sh
payjoin-ffi/dart/test/: fetch_ohttp_keys_http_test.dart  fetch_ohttp_keys_security_test.dart  test_payjoin_integration_test.dart  test_payjoin_unit_test.dart
payjoin-ffi/javascript/: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  ubrn.config.yaml  ubrn.nodejs.config.yaml  ubrn.web.config.yaml  wasm-manifest-patch.toml
payjoin-ffi/javascript/contrib/: test.sh
payjoin-ffi/python/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shell.nix
payjoin-ffi/src/: bitcoin_ffi.rs  error.rs  io.rs  lib.rs  ohttp.rs  output_substitution.rs  payjoin.udl  payjoin_ffi.udl  persist.rs  request.rs  test_utils.rs  time.rs  validation.rs
payjoin-ffi/tests/: bdk_integration_test.rs
payjoin-fuzz/: Cargo.toml  README.md  cycle.sh  fuzz-util.sh  fuzz.sh
payjoin-fuzz/contrib/: lint.sh
payjoin-io/: Cargo.toml  README.md
payjoin-io/src/: error.rs  lib.rs  ohttp_keys.rs
payjoin-mailroom/: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.example.toml  docker-compose.yml  flake.example.nix  payjoin-mailroom.example.service
payjoin-mailroom/contrib/: test.sh
payjoin-mailroom/src/: access_control.rs  config.rs  directory.rs  key_config.rs  lib.rs  main.rs  metrics.rs  middleware.rs  telemetry.rs
payjoin-mailroom/static/: index.html
payjoin-mailroom/tests/: integration.rs
payjoin-relay/: Cargo.toml  README.md
payjoin-relay/src/: db.rs  main.rs
payjoin-relay/tests/: e2e.rs
payjoin-service/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  otel-collector-config.yaml
payjoin-service/contrib/: test.sh
payjoin-service/src/: cli.rs  config.rs  lib.rs  main.rs  metrics.rs  middleware.rs
payjoin-test-utils/: CHANGELOG.md  Cargo.toml  README.md
payjoin-test-utils/src/: bitcoind.rs  lib.rs  persist.rs  v2.rs
payjoin/contrib/: check.sh  lint.sh  test.sh
payjoin/src/: bech32.rs  directory.rs  error_codes.rs  fee_rate.rs  hpke.rs  input_type.rs  into_url.rs  io.rs  lib.rs  ohttp.rs  output_substitution.rs  output_type.rs  persist.rs  psbt.rs  relay.rs  request.rs  uri.rs  v2.rs  weight.rs
payjoin/tests/: e2e.rs  integration.rs  ohttp-keys  uri_api.rs
payjoind/: Cargo.toml
payjoind/src/: main.rs
src/: io.rs  (+17 more)
(+289 files in other folders)
