[workspace]
members = [
  "fuzz",
  "ohttp-relay",
  "payjoin",
  "payjoin-cli",
  "payjoin-directory",
  "payjoin-test-utils",
  "payjoin-ffi",
  "payjoin-mailroom",
]
resolver = "2"

[patch.crates-io]
payjoin-fuzz = { path = "fuzz" }
ohttp-relay = { path = "ohttp-relay" }
payjoin = { path = "payjoin" }
payjoin-directory = { path = "payjoin-directory" }
payjoin-mailroom = { path = "payjoin-mailroom" }
payjoin-test-utils = { path = "payjoin-test-utils" }

[profile.nix-ci]
inherits = "test"
debug = false
