[workspace]
members = [
  "fuzz",
  "payjoin",
  "payjoin-cli",
  "payjoin-test-utils",
  "payjoin-ffi",
  "payjoin-mailroom",
]
resolver = "3"

[patch.crates-io]
payjoin-fuzz = { path = "fuzz" }
payjoin = { path = "payjoin" }
payjoin-mailroom = { path = "payjoin-mailroom" }
payjoin-test-utils = { path = "payjoin-test-utils" }

[patch."https://github.com/payjoin/rust-payjoin.git"]
payjoin = { path = "payjoin" }

[profile.nix-ci]
inherits = "test"
debug = false
