[package]
name = "payjoin-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ["fuzzing"]
fuzzing = []

[dependencies]
bitcoin = { version = "0.32.7", features = ["base64"] }
bitcoin_uri = { version = "0.1.0" }
payjoin = { version = "1.0.0-rc.0", default-features = false, features = ["_core", "v1", "v2"] }
payjoin-test-utils = { path = "../payjoin-test-utils" }
libfuzzer-sys = { version = "0.4.0" }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
url = { version = "2.5.4", default-features=false, features = ["serde"] }

[[bin]]
name = "uri_deserialize_pjuri"
path = "fuzz_targets/uri/deserialize_pjuri.rs"
test = false
doc = false
