[package]
name = "payjoin-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = []

[dependencies]
arbitrary = { version = "1.4.2" }
bitcoin_uri = { version = "0.1.0" }
home = "=0.5.11"
libfuzzer-sys = { version = "0.4.10" }
payjoin = { path = "../payjoin", default-features = false, features = [
  "arbitrary",
  "_core",
  "v1",
  "v2",
] }

# Pinned transitive dependencies that appear unused to cargo-machete
[package.metadata.cargo-machete]
ignored = ["home"]

[[bin]]
name = "uri_deserialize_pjuri"
path = "fuzz_targets/uri/deserialize_pjuri.rs"
doc = false
bench = false

[[bin]]
name = "url_decode_url"
path = "fuzz_targets/url/decode_url.rs"
doc = false
bench = false

[[bin]]
name = "url_arbitrary_url"
path = "fuzz_targets/url/arbitrary_url.rs"
doc = false
bench = false
