[package]
name = "ohttp-relay"
version = "0.0.11"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Relay Oblivious HTTP requests to protect IP metadata"
repository = "https://github.com/payjoin/rust-payjoin/tree/master/ohttp-relay"
readme = "README.md"
keywords = ["ohttp", "privacy"]
categories = ["web-programming", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.85.0"
exclude = ["tests"]

[features]
default = ["bootstrap"]
bootstrap = ["connect-bootstrap", "ws-bootstrap"]
connect-bootstrap = []
ws-bootstrap = ["futures", "rustls", "tokio-tungstenite"]
_test-util = []

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
futures = { version = "0.3.31", optional = true }
hex = { package = "hex-conservative", version = "0.1.1" }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
  "webpki-roots",
  "http1",
  "ring",
] }
hyper-util = { version = "0.1.16", features = ["client-legacy", "service"] }
rustls = { version = "0.23.31", optional = true, default-features = false, features = [
  "ring",
] }
tokio = { version = "1.47.1", features = [
  "io-std",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.27.0", optional = true }
tokio-util = { version = "0.7.16", features = ["net", "codec"] }
tower = "0.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ohttp = { package = "bitcoin-ohttp", version = "0.6" }
bhttp = { version = "0.6.1", features = ["http"] }

[dev-dependencies]
mockito = "1.7.0"
rcgen = "0.12"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls",
  "blocking",
] }
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["process", "test-util"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
  "ring",
] }
uuid = { version = "1.18.0", features = ["v4"] }
