[package]
name = "payjoin-cli"
version = "0.2.0"
authors = ["Dan Gould <d@ngould.dev>"]
description = "A command-line Payjoin client for Bitcoin Core"
repository = "https://github.com/payjoin/rust-payjoin"
readme = "README.md"
keywords = ["bip78", "payjoin", "bitcoin"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.85"
resolver = "2"
exclude = ["tests"]

[package.metadata.cargo-machete]
ignored = ["rustls"]

[[bin]]
name = "payjoin-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["v2"]
native-certs = ["reqwest/rustls-tls-native-roots"]
_manual-tls = ["reqwest/rustls-tls", "payjoin/_manual-tls", "tokio-rustls"]
v1 = ["payjoin/v1", "futures", "hyper", "hyper-util", "http-body-util"]
v2 = ["payjoin/v2", "payjoin/io", "hyper"]

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
bitcoind-async-client = "0.10.2"
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
dirs = "6.0.0"
futures = { version = "0.3.32", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.6.0", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1.16", optional = true }
log = "0.4.27"
payjoin = { version = "0.25.0", default-features = false }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rcgen = { version = "0.14.3", optional = true }
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls = { version = "0.22.4", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = [
  "ring",
], default-features = false, optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
nix = { version = "0.30.1", features = ["aio", "process", "signal"] }
payjoin-test-utils = { version = "0.0.1" }
tempfile = "3.20.0"
