[package]
name = "payjoin-client"
version = "0.1.0"
authors = ["Dan Gould <d@ngould.dev>", "Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
payjoin = { path = "../payjoin", features = ["sender", "receiver"] }
bitcoincore-rpc = "0.16.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
rouille = "3.6.1"
base64 = "0.13.0"
clap = "4.1.4"
