[package]
name = "payjoin-client"
version = "0.1.15"
authors = ["Dan Gould <d@ngould.dev>", "Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dependencies]
anyhow = "1.0.70"
base64 = "0.13.0"
bitcoin = "0.29.2"
bip21 = "0.2.0"
bitcoincore-rpc = "0.16.0"
clap = "4.1.4"
config = "0.13.3"
env_logger = "0.9.0"
log = "0.4.7"
payjoin = { path = "../payjoin", features = ["send", "receive"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
rouille = "3.6.1"
serde = { version = "1.0.160", features = ["derive"] }
