[package]
authors = ["jbesraa <jbesraa@gmail.com>"]
description = "IO utilities for Payjoin"
edition = "2021"
keywords = ["bip77", "payjoin", "bitcoin", "networking"]
license = "MITNFA"
name = "payjoin-defaults"
readme = "README.md"
repository = "https://github.com/payjoin/rust-payjoin"
resolver = "2"
version = "0.0.1"

[features]
danger-local-https = ["rustls"]
v2 = ["payjoin/v2"]

[dependencies]
payjoin = { version = "0.15.0", features = ["send", "receive"] }
rustls = { version = "0.22.2", optional = true }
ureq = "2.9.4"

[dev-dependencies]

