[package]
name = "payjoin-directory"
version = "0.0.3"
authors = ["Dan Gould <d@ngould.dev>"]
description = "A store-and-forward and Oblivious Gateway Resource directory server for Async Payjoin"
repository = "https://github.com/payjoin/rust-payjoin"
readme = "README.md"
keywords = ["bip78", "bip77", "payjoin", "bitcoin", "ohttp"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.85"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_manual-tls = ["hyper-rustls", "tokio-rustls"]
default = ["redis"]
redis = ["dep:redis"]

[dependencies]
anyhow = "1.0.99"
bitcoin = { version = "0.32.7", features = ["base64", "rand-std"] }
bhttp = { version = "0.6.1", features = ["http"] }
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features=false, features = ["webpki-roots", "http1", "ring"], optional=true }
hyper-util = { version = "0.1.16", features = ["tokio"] }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0"}
payjoin = { version = "0.24.0", features = ["directory"], default-features = false }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"], optional = true }
tokio = { version = "1.23.31", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = ["ring"], default-features = false, optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
prometheus = "0.13.4"
clap = { version = "4.5.45", features = ["derive", "env"] }
config = "0.15.14"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.20.0"
