[package]
name = "payjoin-directory"
version = "0.0.3"
authors = ["Dan Gould <d@ngould.dev>"]
description = "A store-and-forward and Oblivious Gateway Resource directory server for Async Payjoin"
repository = "https://github.com/payjoin/rust-payjoin"
readme = "README.md"
keywords = ["bip78", "bip77", "payjoin", "bitcoin", "ohttp"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"
edition = "2021"
rust-version = "1.85"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_manual-tls = ["tokio-rustls"]
acme = ["tokio-rustls-acme"]

[dependencies]
anyhow = "1.0.99"
bhttp = { version = "0.6.1", features = ["http"] }
bitcoin = { version = "0.32.7", features = ["base64", "rand-std"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
config = "0.15.14"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio", "service"] }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
ohttp-relay = { path = "../ohttp-relay" }
payjoin = { version = "1.0.0-rc.1", features = [
  "directory",
], default-features = false }
prometheus = "0.13.4"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", features = [
  "ring",
], default-features = false, optional = true }
tokio-rustls-acme = { version = "0.7.1", optional = true }
tokio-stream = { version = "0.1.17", features = ["net"] }
tower = "0.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"
