[package]
name = "payjoin-ffi"
version = "0.24.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["tests"]

[features]
default = []
csharp = ["dep:uniffi-bindgen-cs"]
dart = ["dep:uniffi-dart"]
_test-utils = ["payjoin-test-utils", "tokio"]
_manual-tls = ["payjoin/_manual-tls"]
wasm_js = ["getrandom/js"]

[lib]
name = "payjoin_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
async-trait = "0.1"
getrandom = "0.2"
icu_locale_core = "=2.0.1"
icu_provider = "=2.0.0"
lazy_static = "1.5.0"
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
payjoin = { version = "0.25.0", features = ["v1", "v2"] }
payjoin-test-utils = { version = "0.0.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"], optional = true }
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi-bindgen-cs = { git = "https://github.com/chavic/uniffi-bindgen-cs.git", rev = "878a3d269eacce64beadcd336ade0b7c8da09824", optional = true }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart.git", rev = "26739b93ca0d3e95dee8c8362d5d971cc931c6f3", optional = true }
url = "2.5.4"

# getrandom is ignored here because it's required by the wasm_js feature
# icu deps are ignored here because they're required to be pinned as transitive deps of url
# Even though they may appear unused in the default feature set, they are legitimate dependencies.
[package.metadata.cargo-machete]
ignored = ["getrandom", "icu_provider", "icu_locale_core"]

[dev-dependencies]
bdk = { version = "0.29.0", features = [
  "all-keys",
  "use-esplora-ureq",
  "keys-bip39",
  "rpc",
] }
