[package]
name = "payjoin-ffi"
version = "0.24.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["tests"]

[features]
default = []
csharp = ["dep:uniffi-bindgen-cs"]
dart = ["dep:uniffi-dart"]
_test-utils = ["payjoin-test-utils", "tokio"]
_manual-tls = ["payjoin/_manual-tls"]
wasm_js = ["getrandom/js"]

[lib]
name = "payjoin_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
async-trait = "0.1.89"
getrandom = "0.2.10"
icu_locale_core = "=2.0.1"
icu_provider = "=2.0.0"
lazy_static = "1.5.0"
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
payjoin = { version = "1.0.0-rc.3", features = ["v1", "v2"] }
payjoin-test-utils = { version = "0.0.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"], optional = true }
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi-bindgen-cs = { git = "https://github.com/benalleng/uniffi-bindgen-cs.git", rev = "71d6556aa60c29b487d931de47053f26ee8a1af1", optional = true }
uniffi-dart = { git = "https://github.com/benalleng/uniffi-dart.git", rev = "ce97870a934cd6046eef059c5805359ac0d59964", optional = true }
url = "2.5.4"

# getrandom is ignored here because it's required by the wasm_js feature
# icu deps are ignored here because they're required to be pinned as transitive deps of url
# socks is ignored as a transitive dep of bdk
# Even though they may appear unused in the default feature set, they are legitimate dependencies.
[package.metadata.cargo-machete]
ignored = ["getrandom", "icu_provider", "icu_locale_core", "socks"]

[dev-dependencies]
bdk = { version = "0.29.0", features = [
  "all-keys",
  "use-esplora-ureq",
  "keys-bip39",
  "rpc",
] }
socks = "0.3.4"
