[package]
name = "payjoin-ffi"
version = "0.24.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["tests"]

[features]
default = []
csharp = ["dep:uniffi-bindgen-cs"]
dart = ["dep:uniffi-dart"]
_test-utils = ["payjoin-test-utils", "tokio"]
_manual-tls = ["payjoin/_manual-tls"]
wasm_js = ["getrandom/js"]

[lib]
name = "payjoin_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
async-trait = "0.1.89"
getrandom = "0.2.10"
icu_locale_core = "=2.0.1"
icu_provider = "=2.0.0"
lazy_static = "1.5.0"
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
payjoin = { version = "1.0.0-rc.3", features = ["v1", "v2"] }
payjoin-test-utils = { version = "0.0.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"], optional = true }
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi-bindgen-cs = { git = "https://github.com/NordSecurity/uniffi-bindgen-cs", tag = "v0.11.0+v0.31.0", optional = true }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart.git", tag = "v0.2.1+v0.31.2", optional = true }
url = "2.5.4"

# Pinned transitive dependencies that appear unused to cargo-machete
[package.metadata.cargo-machete]
ignored = ["getrandom", "icu_provider", "icu_locale_core", "socks"]

[dev-dependencies]
bdk = { version = "0.29.0", features = [
  "all-keys",
  "use-esplora-ureq",
  "keys-bip39",
  "rpc",
] }
socks = "0.3.4"
