[package]
name = "payjoin-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = []
afl_fuzz = ["afl"]
honggfuzz_fuzz = ["honggfuzz"]
libfuzzer_fuzz = ["libfuzzer-sys"]

[dependencies]
afl = { version = "0.17.1", optional = true }
bitcoin = { version = "0.32.7", features = ["base64"] }
bitcoin_uri = { version = "0.1.0" }
home = "=0.5.11"
honggfuzz = { version = "=0.5.55", default-features = false, optional = true }
libfuzzer-sys = { version = "0.4.10", optional = true }
payjoin = { path = "../payjoin", default-features = false, features = [
  "_core",
  "v1",
  "v2",
] }

[package.metadata.cargo-machete]
ignored = ["home"]

[[bin]]
name = "uri_deserialize_pjuri"
path = "fuzz_targets/uri/deserialize_pjuri.rs"
doc = false
bench = false
