[package]
name = "payjoin-mailroom"
version = "0.1.0"
description = "Combined Payjoin Directory and OHTTP Relay"
repository = "https://github.com/payjoin/rust-payjoin/tree/master/payjoin-mailroom"
keywords = ["bip77", "bitcoin", "ohttp", "payjoin", "privacy"]
categories = [
  "cryptography::cryptocurrencies",
  "network-programming",
  "web-programming",
]
license = "MITNFA"
edition = "2021"
rust-version = "1.85.0"

[features]
default = ["bootstrap"]
bootstrap = ["connect-bootstrap", "ws-bootstrap"]
connect-bootstrap = []
ws-bootstrap = ["dep:tokio-tungstenite", "dep:rustls"]
_manual-tls = ["dep:axum-server", "dep:rustls"]
acme = ["dep:tokio-rustls-acme", "dep:axum-server", "dep:rustls"]
access-control = ["dep:flate2", "dep:ipnet", "dep:maxminddb", "dep:reqwest"]
telemetry = ["dep:opentelemetry-otlp"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.8", features = [
  "tls-rustls-no-provider",
], optional = true }
bhttp = { version = "0.6.1", features = ["http"] }
bitcoin = { version = "0.32.7", features = ["base64", "rand-std"] }
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
flate2 = { version = "1.1", optional = true }
futures = "0.3"
hex = { package = "hex-conservative", version = "0.1.1" }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
  "webpki-roots",
  "http1",
  "ring",
] }
hyper-util = { version = "0.1.16", features = ["client-legacy", "service"] }
ipnet = { version = "2", optional = true }
maxminddb = { version = "0.27", optional = true }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", optional = true, features = [
  "reqwest-rustls",
] }
opentelemetry_sdk = "0.31"
payjoin = { version = "1.0.0-rc.2", features = [
  "directory",
], default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
], optional = true }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08", "serde"] }
tokio-rustls-acme = { version = "0.9.0", features = ["axum"], optional = true }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-tungstenite = { version = "0.27.0", optional = true }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
mockito = "1.7.0"
opentelemetry_sdk = { version = "0.31", features = ["testing"] }
payjoin-test-utils = { version = "0.0.1" }
rcgen = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tempfile = "3.20"
tokio = { version = "1.47", features = ["test-util"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
  "ring",
] }
uuid = { version = "1.18.0", features = ["v4"] }
