[package]
name = "payjoin-service"
version = "0.0.1"
description = "Unified Payjoin Directory and OHTTP Relay service"
repository = "https://github.com/payjoin/rust-payjoin/tree/master/payjoin-service"
keywords = ["bip77", "bitcoin", "ohttp", "payjoin", "privacy"]
categories = [
  "cryptography::cryptocurrencies",
  "network-programming",
  "web-programming",
]
license = "MITNFA"
edition = "2021"
rust-version = "1.85.0"

[features]
default = []
_manual-tls = ["dep:axum-server", "dep:rustls", "ohttp-relay/_test-util"]
acme = [
  "dep:tokio-rustls-acme",
  "dep:axum-server",
  "dep:rustls",
  "dep:tokio-stream",
]

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.8", features = [
  "tls-rustls-no-provider",
], optional = true }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
ohttp-relay = { path = "../ohttp-relay", features = ["bootstrap"] }
payjoin-directory = { path = "../payjoin-directory" }
prometheus = "0.14.0"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08", "serde"] }
tokio-rustls-acme = { version = "0.9.0", features = ["axum"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ohttp = { package = "bitcoin-ohttp", version = "0.6" }
bhttp = { version = "0.6.1", features = ["http"] }

[dev-dependencies]
payjoin-test-utils = { version = "0.0.1" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tempfile = "3.20"
