[package]
name = "payjoin-test-utils"
version = "0.0.1"
edition = "2021"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Payjoin test utilities"
repository = "https://github.com/payjoin/rust-payjoin"
rust-version = "1.85"
license = "MIT"

[dependencies]
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
bitcoin = { version = "0.32.7", features = ["base64"] }
corepc-node = { version = "0.10.0", features = ["download", "29_0"] }
http = "1.3.1"
ohttp = { package = "bitcoin-ohttp", version = "0.6.0" }
once_cell = "1.21.3"
payjoin = { version = "1.0.0-rc.1", features = [
  "io",
  "_manual-tls",
  "_test-utils",
] }
payjoin-service = { path = "../payjoin-service", features = ["_manual-tls"] }
rcgen = "0.14.3"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls",
] }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
